<resources>
    <string name="app_name">创业盒子</string>
    <string name="api_url">http://st.didaaa.com</string>

    <string-array name="primary_list_strings">
        <item>产品</item>
        <item>设计</item>
        <item>技术</item>
        <item>运营</item>
        <item>管理</item>
        <item>市场</item>
        <item>人事</item>
        <item>第三方</item>
    </string-array>

    <!-- toast -->
    <string name="toast_network_error">网络不好，请检查你的网络连接</string>
    <string name="toast_no_content_recommend">请输入您要推荐的产品</string>
    <string name="toast_no_content_suggest">请输入您的建议</string>
    <string name="toast_thanks_recommend">感谢您的推荐</string>
    <string name="toast_thanks_suggest">感谢您的建议</string>

    <string name="label_recommend">我要推荐</string>
    <string name="label_suggest">提点建议</string>
    <string name="label_about">关于我们</string>

    <string name="recommend_content_hint">请输入要推荐的产品</string>
    <string name="suggest_content_hint">建议内容在这里输入哦</string>
    <string name="about_email">邮箱：service@loopeer.com</string>
    <string name="about_copyright">绿葡科技版权所有</string>

    <string name="feedback_contact_hint">联系方式：（选填）</string>
    <string name="floatingActionButton_download">下载</string>
    <string name="no_content_hint">暂无内容</string>

</resources>
